2003-06-12  Motoya Kurotsu  <kurotsu@allied-telesis.co.jp>

        * src/sys/netinet/ip_input.c(ip_reass):
	ip_nfragpackets is increasing by dropping fragments due to mbuf 
	starvation and eventually exceeds ip_maxfragpackets, which 
	results in refusing all fragments later. On the other hand, nipq 
	and maxnipq can be used as a substitute for ip_nfragpackets and 
	ip_maxfragpackets. This fix is the collection of the fixes done 
	at the following revisions of freebsd main branch; 1.221, 1.222, 
	1.223 and 1.229.

2003-06-23  Michael Checky  <Michael_Checky@ThermoKing.com>
 
	* include/netinet/icmp_var.h: Changed icmpstat definition to a
	declaration so stopping ld from generating a multiple symbol
	definition error if combining of common symbols is disabled in the
	toolchain.
	* src/sys/netinet/ip_icmp.c: Added an icmpstat definition.

2003-06-23  Jay Foster  <jay@systech.com>

	* src/ecos/support.c: Increase the stack size for the background
	thread when IPv6 is enabled otherwise the stack overflows.

2003-06-09  Nick Garnett  <nickg@balti.calivar.com>

	* src/ecos/synch.c (spl_any): Put call to cyg_mutex_lock() into a
	loop so that releases of the current thread do not get mistaken
	for locks and trigger the asserts.

	* include/sys/malloc.h (M_DEVBUF): Added this definition.

	* include/netinet/in.h: Changed size of sockaddr_in.sin_zero[] to
	24 bytes. This makes a sockaddr_in the same size as a sockaddr.
	Otherwise the definitions of things like ifaliasreq and
	in_aliasreq do not match when they should.

2003-05-12  Motoya Kurotsu  <kurotsu@allied-telesis.co.jp>

	* src/ecos/timeout.c (do_timeout): The head of the linked list of
	timers is timeout, not _timeout.
	* src/ecos/timeout.c (timeout): Linear search the array for empty 
	entries and don't walk it like a linked list, because it is not.
	* src/ecos/timeout.c (untimeout): Linear search is faster since 
	there are many entries in the linked list which are not in the 
	array.
